cleanup anything left from template

--- a/custom_components/rinnai_fireplace/translations/en.json
+++ b/custom_components/rinnai_fireplace/translations/en.json
@@ -1,18 +1,3 @@
 {
-    "config": {
-        "step": {
-            "user": {
-                "description": "If you need help with the configuration have a look here: https://github.com/ludeeus/rinnai_fireplace",
-                "data": {
-                    "username": "Username",
-                    "password": "Password"
-                }
-            }
-        },
-        "error": {
-            "auth": "Username/Password is wrong.",
-            "connection": "Unable to connect to the server.",
-            "unknown": "Unknown error occurred."
-        }
-    }
+    "config": {}
 }
